--- a/WEB/index.html
+++ b/WEB/index.html
@@ -1,12 +1,28 @@
-<!DOCTYPE html>  
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primer Práctica</title>
-    <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon"> <!-- Esta etqieta es para poner ícono a la página web -->
+    <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon">
+    <!-- Esta etiqueta es para poner ícono a la página web -->
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
+
 <body>
-    
+    <header>
+        <h1>Mi primer título</h1>
+        <p>Mi primer párrafo</p>
+        <div>
+            <img src="./assets/img/logo2.png" alt="Primer - Práctica ">
+            <label for="">Usuario</label>
+            <input type="text">
+            <h1>Formulario</h1>
+            <h2>Datos personales</h2>
+        </div>
+    </header>
+    <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
