--- a/WEB/index.html
+++ b/WEB/index.html
@@ -12,16 +12,52 @@
 
 <body>
     <header>
-        <h1>Mi primer título</h1>
-        <p>Mi primer párrafo</p>
-        <div>
-            <img src="./assets/img/logo2.png" alt="Primer - Práctica ">
-            <label for="">Usuario</label>
-            <input type="text">
-            <h1>Formulario</h1>
-            <h2>Datos personales</h2>
+        <div class="row p-3 bg-light">
+            <div class="col-2 col-md-1">
+                <img width="60" height="60" src="./assets/img/logo2.png" alt="Primer - Práctica" />
+            </div>
+
+            <div class="col-7 col-md-3">
+                <h1>Mi primer título</h1>
+            </div>
+            
+            <div class="col-3 col-md-8 text-end">
+                <label for="">Usuario</label>
+            </div>
         </div>
     </header>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled">Disabled</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <section>
+
+    </section>
+
+
     <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 
