--- a/WEB/index.html
+++ b/WEB/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
     </header>
-    
+
     <!-- Barra de Nevegación -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -56,8 +56,44 @@
     </nav>
 
     <!-- Sección -->
-    <section>
-        
+    <section id="home" class="shadow-sm p-3 mb-5 bg-body rounded">
+        <div class="row">
+            <!-- Card 1 -->
+            <div class="col-sm-6 col-md-4">
+                <div class="card">
+                    <img src="./assets/img/img1.jpg" class="card-img-top" alt="Primos Utez - 9 Medallas Utez - UTEZ - Deporte">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Card 2 -->
+            <div class="col-sm-6 col-md-4">
+                <div class="card">
+                    <img src="./assets/img/img2.jpg" class="card-img-top" alt="Certificación Docentes - UTEZ">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Card 3 -->
+            <div class="col-sm-6 col-md-4">
+                <div class="card">
+                    <img src="./assets/img/img3.jpg" class="card-img-top" alt="Huico - UTEZ - Vampiro - Jacobo">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+        </div>
     </section>
 
 
