--- a/WEB/index.html
+++ b/WEB/index.html
@@ -18,17 +18,17 @@
                 <img width="60" height="60" src="./assets/img/logo2.png" alt="Primer - Práctica" />
             </div>
 
-            <div class="col-7 col-md-3">
+            <div class="col-md-3 d-none d-sm-block">
                 <h1>Mi primer título</h1>
             </div>
 
-            <div class="col-3 col-md-8 text-end">
+            <div class="col-10 col-md-8 d-flex justify-content-center justify-content-md-end align-items-center">
                 <label for="">Usuario</label>
             </div>
         </div>
     </header>
 
-    <!-- Barra de Nevegación -->
+    <!-- Barra de Navegación -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Navbar</a>
@@ -55,45 +55,58 @@
         </div>
     </nav>
 
-    <!-- Sección -->
+    <!-- Section -->
     <section id="home" class="shadow-sm p-3 mb-5 bg-body rounded">
-        <div class="row">
-            <!-- Card 1 -->
-            <div class="col-sm-6 col-md-4">
-                <div class="card">
-                    <img src="./assets/img/img1.jpg" class="card-img-top" alt="Primos Utez - 9 Medallas Utez - UTEZ - Deporte">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="container">
+            <div class="row">
+                <!-- Card 1 -->
+                <div class="col-sm-6 col-md-4">
+                    <div class="card">
+                        <img src="./assets/img/img1.jpg" class="card-img-top"
+                            alt="Primos Utez - 9 Medallas Utez - UTEZ - Deporte">
+                        <div class="card-body">
+                            <h5 class="card-title">Torneo de Robots</h5>
+                            <p class="card-text">La UTEZ gana el premio estatal de robótica del estado de Morelos</p>
+                            <div class="row">
+                                <div class="col-12 text-center">
+                                    <a href="#" class="btn btn-link">Ver más...</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 2 -->
+                <div class="col-sm-6 col-md-4">
+                    <div class="card">
+                        <img src="./assets/img/img2.jpg" class="card-img-top" alt="Certificación Docentes - UTEZ">
+                        <div class="card-body">
+                            <h5 class="card-title">¡Certificación Otorgada!</h5>
+                            <p class="card-text">Maestras de la UTEZ reciben Certificación de robótica</p>
+                            <div class="row">
+                                <div class="col-12 text-center">
+                                    <a href="#" class="btn btn-link">Ver más...</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 3 -->
+                <div class="col-sm-6 col-md-4">
+                    <div class="card">
+                        <img src="./assets/img/img3.jpg" class="card-img-top" alt="Huico - UTEZ - Vampiro - Jacobo">
+                        <div class="card-body">
+                            <h5 class="card-title">¡Se confirma!</h5>
+                            <p class="card-text">Llamado por todos como Huico, es encontrado por las noches deambulando
+                                como un Vampiro</p>
+                            <div class="row">
+                                <div class="col-12 text-center">
+                                    <a href="#" class="btn btn-link">Ver más...</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <!-- Card 2 -->
-            <div class="col-sm-6 col-md-4">
-                <div class="card">
-                    <img src="./assets/img/img2.jpg" class="card-img-top" alt="Certificación Docentes - UTEZ">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Card 3 -->
-            <div class="col-sm-6 col-md-4">
-                <div class="card">
-                    <img src="./assets/img/img3.jpg" class="card-img-top" alt="Huico - UTEZ - Vampiro - Jacobo">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-        </div>
     </section>
 
 
