--- a/WEB/index.html
+++ b/WEB/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon">
     <!-- Esta etiqueta es para poner ícono a la página web -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -60,9 +61,9 @@
         <div class="container">
             <div class="row">
                 <!-- Card 1 -->
-                <div class="col-sm-6 col-md-4">
+                <div class="col-sm-6 col-md-4 mb-3 mb-md-0">
                     <div class="card">
-                        <img src="./assets/img/img1.jpg" class="card-img-top"
+                        <img src="./assets/img/img1.jpg" class="card-img-top card-img-top-max"
                             alt="Primos Utez - 9 Medallas Utez - UTEZ - Deporte">
                         <div class="card-body">
                             <h5 class="card-title">Torneo de Robots</h5>
@@ -76,9 +77,10 @@
                     </div>
                 </div>
                 <!-- Card 2 -->
-                <div class="col-sm-6 col-md-4">
+                <div class="col-sm-6 col-md-4 mb-3 mb-md-0">
                     <div class="card">
-                        <img src="./assets/img/img2.jpg" class="card-img-top" alt="Certificación Docentes - UTEZ">
+                        <img src="./assets/img/img2.jpg" class="card-img-top card-img-top-max"
+                            alt="Certificación Docentes - UTEZ">
                         <div class="card-body">
                             <h5 class="card-title">¡Certificación Otorgada!</h5>
                             <p class="card-text">Maestras de la UTEZ reciben Certificación de robótica</p>
@@ -93,7 +95,8 @@
                 <!-- Card 3 -->
                 <div class="col-sm-6 col-md-4">
                     <div class="card">
-                        <img src="./assets/img/img3.jpg" class="card-img-top" alt="Huico - UTEZ - Vampiro - Jacobo">
+                        <img src="./assets/img/img3.jpg" class="card-img-top card-img-top-max"
+                            alt="Huico - UTEZ - Vampiro - Jacobo">
                         <div class="card-body">
                             <h5 class="card-title">¡Se confirma!</h5>
                             <p class="card-text">Llamado por todos como Huico, es encontrado por las noches deambulando
