Cambios de la clase

--- a/WEB/index.html
+++ b/WEB/index.html
@@ -112,6 +112,15 @@
             </div>
     </section>
 
+    <!-- Botones CRUD -->
+    <div style="flex-direction: column; display: flex; align-items: center;">
+        <button class="button" onclick="get()">GET</button>
+        <button class="button" onclick="getAll()">GET ALL</button>
+        <button class="button" onclick="post()">POST</button>
+        <button class="button" onclick="put()">PUT</button>
+        <button class="button" style="background: rgb(190, 6, 6); border: none; color: white !important;"
+            onclick="del()">DELETE</button>
+    </div>
 
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/script.js"></script>
