--- a/WEB/index.html
+++ b/WEB/index.html
@@ -129,6 +129,7 @@
                 <div class="container">
                     <form id="">
                         <div class="row">
+                            <!-- Inputs -->
                             <div class="col-12 col-md-6">
                                 <div class="col-12 my-3">
                                     <label for="">Nombre completo <span class="text-danger">(*)</span></label>
@@ -153,6 +154,7 @@
                                     </datalist>
                                 </div>
                             </div>
+                            <!-- Mapa -->
                             <div class="col-12 col-md-6 text-center">
                                 <h3>Ven y conócenos</h3>
                                 <iframe
