--- a/Examen/index.html
+++ b/Examen/index.html
@@ -158,6 +158,8 @@
             <img src="./aseets/img/Amazon_icon.png" alt="">
         </div>
     </footer>
+
+    <script src="./js/javascript.js"></script>
 </body>
 
 </html>
